[package]
name = "comms-rs"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>", "rfdoell", "garbagetrash"]
description = "Library for building high-performance DSP transmit and receive pipelines."
homepage = "https://github.com/ostrosco/comms-rs"
repository = "https://github.com/ostrosco/comms-rs"
readme = "README.md"
keywords = ["dsp", "rf"]
license = "MIT"

[dependencies]
byteorder = "1"
num = "0.2"
num-complex = "0.2"
num-traits = "0.2"
crossbeam = "0.4"
crossbeam-channel = "0.2"
rand = "0.5"
rayon = "1"
rodio = "0.8"
rustfft = "2.1"
rtlsdr = {version = "0.1", optional = true}

[features]
rtlsdr_support = ["rtlsdr"]
