[package]
name = "comms-rs"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>", "rfdoell", "garbagetrash"]
description = "Library for building high-performance DSP transmit and receive pipelines."
homepage = "https://github.com/ostrosco/comms-rs"
repository = "https://github.com/ostrosco/comms-rs"
readme = "README.md"
keywords = ["dsp", "rf"]
license = "MIT"
edition = "2018"

[dependencies]
assert_approx_eq = "1.0"
byteorder = "1"
num-complex = "0.2"
num-traits = "0.2"
crossbeam = "0.4"
crossbeam-channel = "0.2"
rand = "0.5"
rayon = "1"
rodio = {version = "0.8", optional = true}
rustfft = "2.1"
rtlsdr = {version = "0.1", optional = true}
serde = "1"
bincode = "1"
zmq = {version = "0.8", optional = true}

[dependencies.num]
version = "0.2"
features = ["serde"]

[features]
rtlsdr_node = ["rtlsdr"]
zmq_node = ["zmq"]
audio_node = ["rodio"]

[[example]]
name = "fm_radio"
required-features = ["rtlsdr_node", "audio_node"]

[[example]]
name = "play_audio"
required-features = ["audio_node"]
