[package]
name = "comms-rs"
version = "0.1.0"
authors = ["ostrosco <ostrosco@fastmail.fm>", "rfdoell", "garbagetrash"]
description = "Library for building high-performance DSP transmit and receive pipelines."
homepage = "https://github.com/ostrosco/comms-rs"
repository = "https://github.com/ostrosco/comms-rs"
readme = "README.md"
keywords = ["dsp", "rf"]
license = "MIT"
edition = "2018"

[dependencies]
assert_approx_eq = "1.0"
byteorder = "1"
num-complex = "0.2"
num-traits = "0.2"
crossbeam = "0.7"
hashbrown = "0.1"
rand = "0.5"
rayon = "1"
rodio = {version = "0.8", optional = true}
rustfft = "2.1"
rtlsdr = {version = "0.1", optional = true}
rtplot = "0.2"
serde = "1"
serde_cbor = "0.9"
uuid = {version = "0.7", features = ["v4"]}
zmq = {version = "0.8", optional = true}
node_derive = {path = "node_derive"}

[dependencies.num]
version = "0.2"
features = ["serde"]

[profile.release]
lto = true
opt-level = 3

[features]
rtlsdr_node = ["rtlsdr"]
zmq_node = ["zmq"]
audio_node = ["rodio"]

[[example]]
name = "fm_radio"
required-features = ["rtlsdr_node", "audio_node"]

[[example]]
name = "play_audio"
required-features = ["audio_node"]

[[example]]
name = "bpsk_mod"

[[example]]
name = "single_thread_bpsk"

[[example]]
name = "single_thread_qpsk"

[[example]]
name = "qpsk_zmq"
required-features = ["zmq_node"]
